Added api key for google map

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 			<p>© Всі. Свої, 2017</p>
 		</div>
 	</footer>
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0wJ9jxqh1LFUytatdiHu-D9Z02JYFKCQ"></script>
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/main.js"></script>
