Added link in logo from market.html to index.html

--- a/market.html
+++ b/market.html
@@ -19,7 +19,7 @@
 <body>
 	<header class="ba-header">
 		<div class="ba-container cf">
-			<a href="#" class="ba-logo ba-float-left">
+			<a href="index.html" class="ba-logo ba-float-left">
 				<img src="img/logo.png" alt="Свої">
 			</a>
 			<div class="ba-city-box ba-float-left" id="selectBox">
